--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px dotted magenta;
+  /* border: 1px dotted magenta; */
 }
 
 :root {
   --overlay-transparent: rgba(151, 126, 126, 0.7);
   --html-bg: #977e7e;
-  --bg-secondary: #f8ecec;
+  --bg-secondary: rgba(233, 91, 118, 0.33);
   --black: #161f27;
   --white: #fff;
   --red: #e4012a;
   --blue: #00f;
-  --green: #0f0;
+  --green: #01e401;
   --pink: #ffa0a0;
-  --grey: #aaa;
+  --grey: #e7eaef;
+  --light: #202e3a;
   font-size: 16px;
   /* font-size: 4vw; */
   -webkit-font-smoothing: antialiased;
@@ -26,6 +27,16 @@
 /***********************************************************/
 /************************ Icons ****************************/
 /***********************************************************/
+
+.logo-icon {
+  fill: var(--red);
+}
+
+.h-icon {
+  display: inline-block;
+  margin-right: 1rem;
+  height: 1.5rem;
+}
 
 /* titles place icons to the left of header */
 .title {
@@ -46,17 +57,23 @@
   height: 1.5rem;
   min-width: 1.5rem;
   vertical-align: top;
-  margin-right: 0.35rem;
+  stroke: var(--red);
 }
 
 .icon-spacer {
   display: block;
   height: 1.5rem;
-  min-width: 2rem;
+  min-width: 1.5rem;
+  opacity: 0;
+  margin-right: 0.75rem;
 }
 
 .with-spacer {
   display: flex;
+}
+
+.with-spacer .icon {
+  margin-right: 0.75rem;
 }
 
 .icon g {
@@ -65,7 +82,7 @@
   stroke: var(--red);
   stroke-width: 1px;
   height: 1.5rem;
-  opacity: 0.75;
+  opacity: 1;
 }
 
 .active {
@@ -79,6 +96,10 @@
 
 img {
   margin: 1rem auto;
+}
+
+.relative {
+  position: relative;
 }
 
 .logo {
@@ -172,6 +193,10 @@ img {
   padding: 0.5rem;
 }
 
+.m-top-2 {
+  margin-top: 2rem;
+}
+
 .w-100 {
   width: 100%;
 }
@@ -218,6 +243,7 @@ span {
   font-weight: 300;
   font-size: 0.8rem;
   line-height: 110%;
+  color: var(--light);
 }
 
 .small,
@@ -249,6 +275,8 @@ span {
   text-align: center;
   letter-spacing: 0.07rem;
   text-transform: uppercase;
+  color: var(--black);
+  background-color: var(--white);
 }
 
 .btn-small {
@@ -290,11 +318,13 @@ span {
 input {
   display: block;
   margin: 0.25rem auto 1rem;
-  padding: 0.5rem;
+  padding: 0.25rem;
   width: 100%;
-  height: 2rem;
+  height: 1.5rem;
   border: none;
   border-bottom: 0.5px solid var(--black);
+  background-color: var(--white);
+  color: var(--black);
 }
 
 input:focus {
@@ -315,14 +345,17 @@ input:invalid,
   background-repeat: no-repeat;
 }
 
+.b-none {
+  border: none;
+}
 /***********************************************************/
 /********************* HTML Sections ***********************/
 /***********************************************************/
 
 html {
   width: 100%;
-  /* height: 100%; */
-  background-color: var(--html-bg);
+  /* background-color: var(--html-bg); */
+  background-color: var(--white);
 }
 
 body {
@@ -342,6 +375,7 @@ body {
   padding: 0 1rem 80px;
   background-color: var(--white);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   /* border: 2px solid red; */
@@ -400,8 +434,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--pink);
-  opacity: 0.5;
+  border-bottom: 4px solid var(--red);
+  background-color: var(--white);
+}
+
+#header h2 {
+  text-align: center;
+  margin: 0;
+}
+
+#header .icon {
+  height: 1rem;
 }
 
 /***********************************************************/
@@ -409,7 +452,6 @@ body {
 /***********************************************************/
 
 #welcome {
-  border: 2px solid blue;
   max-width: 80%;
 }
 
@@ -502,6 +544,18 @@ body {
 .date-picker .icon,
 .date-picker-left .icon {
   cursor: pointer;
+  height: 1.25rem;
+}
+
+.date-picker .icon g,
+.date-picker-left .icon g {
+  stroke: var(--black);
+  fill: var(--black);
+  opacity: 1;
+}
+
+#search-results .date-picker {
+  margin-top: 1rem;
 }
 
 .test {
@@ -509,44 +563,62 @@ body {
 }
 
 .sort {
-  width: 100%;
-  margin: 1.25rem 0 0.5rem 0;
+  width: 80%;
+  margin: 1.25rem auto 0.5rem auto;
   padding: 0 1rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
+.sort .small {
+  border-bottom: 1px solid var(--black);
+}
+
 #location-preview {
   width: 100%;
   margin: 1rem 0;
-  padding: 0.5rem;
+  padding: 0.25rem 0.5rem;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   border: 1px solid var(--black);
   border-radius: 0.3rem;
+  background-color: var(--white);
+  filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.5));
 }
 
+#location-preview .icon {
+  height: 1.25rem;
+}
+#location-preview .icon g {
+  stroke: var(--black);
+  opacity: 1;
+}
 #location-preview img {
   max-width: 30%;
 }
 
 #preview-info {
-  width: 75%;
+  width: 90%;
   padding: 0.5rem 0.5rem 0 0.75rem;
+  border: 1px solid var(--black);
+  border-radius: 0.3rem;
   background-color: var(--bg-secondary);
 }
 
 #preview-info hr {
   width: 20%;
-  margin: 1rem 0;
+  margin: 1rem 0 0.25rem;
   border-bottom: 1px solid var(--black);
 }
 
 #preview-tests {
-  margin-top: 1rem;
+  margin-top: 0.25rem;
 }
 
-#preview-time {
+#preview-time,
+.preview-next {
   margin: 0.25rem 0 0.5rem;
   padding: 0.25rem;
   display: inline-block;
@@ -555,12 +627,35 @@ body {
   border-radius: 0.3rem;
 }
 
+#preview-time {
+  background-color: var(--white);
+}
+
 #preview-tests ul {
   width: 100%;
 }
 
 #preview-tests li {
   list-style: none;
+}
+
+#next-avail {
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.preview-next {
+  line-height: 100%;
+  border: none;
+  margin-right: 0.5rem;
+  font-weight: bold;
+}
+
+.preview-address {
+  font-size: 0.88rem;
+  margin: 0.5rem 0;
 }
 
 /***********************************************************/
@@ -581,14 +676,18 @@ body {
   align-items: center;
 }
 
+#selection .with-spacer .icon {
+  align-self: start;
+}
+
 #selection h1 {
   margin: 0;
   padding: 0;
 }
 
 #selection .item {
-  margin: 1rem 0;
-  padding: 1rem;
+  margin: 1.5rem 0;
+  padding: 0 1rem;
   display: flex;
 }
 
@@ -597,7 +696,7 @@ body {
 }
 
 #selection .item p {
-  padding-right: 0.25rem;
+  padding: 0 0.5rem 0 0;
   font-size: 0.75rem;
   line-height: 120%;
 }
@@ -612,7 +711,7 @@ body {
 }
 
 #time-item {
-  padding: 1rem;
+  padding: 0 1rem;
   width: 100%;
   height: 120%;
 }
@@ -629,7 +728,13 @@ body {
 }
 
 #appointment-times .icon {
+  cursor: pointer;
   height: 1.5rem;
+}
+
+#appointment-times .icon g {
+  stroke: var(--black);
+  fill: var(--black);
 }
 
 #time-spans {
@@ -689,6 +794,10 @@ body {
   margin-bottom: 0.25rem;
 }
 
+#login-form button {
+  margin-bottom: 0;
+}
+
 #confirm-info {
   padding: 1.5rem 0.5rem 1rem;
 }
@@ -696,6 +805,11 @@ body {
 #confirm-info form {
   margin: 1.5rem auto 0;
   width: 90%;
+}
+
+#confirm-info input {
+  padding: 0.25rem;
+  height: 1.5rem;
 }
 
 #confirm-grid {
@@ -730,11 +844,16 @@ body {
 /***********************************************************/
 
 #appointments {
-  width: 100%;
+  position: absolute;
+  top: 2rem;
+  padding-bottom: 80px;
+  width: 80%;
+  transform: translateX(-0.18rem);
+  background-color: var(--white);
 }
 
 #appointments .tabs {
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -743,10 +862,16 @@ body {
 
 #appointments .tab,
 #appointments .tab-selected {
-  width: 30%;
+  margin-bottom: 0;
+  padding: 0.5rem;
+  min-width: 30%;
+  text-align: center;
   text-transform: initial;
   border: 0.5px solid var(--black);
   border-bottom: none;
+  border-radius: 0.6rem;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 #appointments .tab-selected {
@@ -755,11 +880,42 @@ body {
   border-right: 1px solid;
 }
 
-#appointments .item {
-  margin: 1rem 0;
+.preview-info {
+  font-size: 0.9rem;
+}
+
+.appt-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 45%;
+  left: 90%;
+  stroke: var(--black);
+  fill: var(--black);
+}
+
+.appt-btn-up {
+  top: 90%;
+}
+
+.appt-btn .icon {
+  stroke: var(--black);
+  fill: var(--black);
+}
+
+.appt-item {
+  margin: 0 0 1rem 0;
+  padding: 0 1rem 1rem;
   width: 100%;
   border-radius: 0.6rem;
   border: 1px solid var(--black);
+}
+
+.appt-item h1 {
+  font-size: 1.3rem;
+}
+
+.appt-item h2 {
+  font-size: 1rem;
 }
 
 .appt {
@@ -767,18 +923,13 @@ body {
   padding: 1rem 0.5rem;
 }
 
-.preview {
-  background-image: url('icons/ArrowRightCircle.svg');
-  background-size: 1rem;
-  background-position: right;
-  transform: rotate(90deg);
+.appt-field {
+  margin: 1.5rem 0;
 }
 
-.full {
-  background-image: url('icons/ArrowRightCircle.svg');
-  background-size: 1rem;
-  background-position: right;
-  transform: rotate(270deg);
+.appt-field h2,
+.appt-field p {
+  padding-left: 0.75rem;
 }
 
 .test-span {
@@ -791,11 +942,23 @@ body {
 
 #account {
   width: 100%;
+  margin-top: 1rem;
+  padding: 0 1rem;
+}
+
+#account-header svg {
+  stroke: var(--red);
+  fill: var(--red);
+}
+
+#account-header {
+  margin-bottom: 3rem;
 }
 
 #account .item {
-  margin: 0.5rem;
-  padding: 0.5rem;
+  position: relative;
+  margin: 1rem 0 1.5rem;
+  padding: 0 0.25rem;
 }
 
 #account .item-text {
@@ -803,11 +966,46 @@ body {
 }
 
 #account .item-top {
-  padding: 0.5rem;
+  margin: 0 0 1rem;
+  padding: 0 1rem 0 1rem;
   width: 100%;
   display: grid;
   column-gap: 0.5rem;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 0.5fr 2fr 0.75fr 0.75fr;
+}
+
+#account h2 {
+  font-size: 1rem;
+  margin-bottom: 0.25rem;
+}
+
+.icon-fill {
+  fill: var(--red);
+}
+
+.icon-adress,
+.icon-dob,
+.icon-insurance {
+  fill: none;
+}
+
+#account .btn-small {
+  max-height: 1.5rem;
+  margin: auto;
+}
+
+#account .btn-small g {
+  stroke: var(--black);
+  opacity: 1;
+}
+
+.account-input {
+  margin: 0 auto;
+  max-width: 80%;
+}
+
+.account-input label {
+  font-size: 0.9rem;
 }
 
 /***********************************************************/
@@ -825,17 +1023,39 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 1rem;
   width: 100%;
   height: 80px;
-  background-color: var(--pink);
-  opacity: 0.5;
+  border-top: 4px solid var(--red);
+  background-color: var(--white);
 }
 
 #navbar {
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.navbar-default .icon {
+  transform: scale(1.2);
+  stroke: var(--red);
+  opacity: 0.7;
+}
+
+.navbar-active .icon {
+  transform: scale(1.3);
+  stroke: var(--red);
+  opacity: 1;
+}
+
+.navbar-disabled .icon {
+  transform: scale(1.2);
+  stroke: var(--red);
+  opacity: 0.25;
 }
 
 /***********************************************************/
@@ -857,7 +1077,7 @@ ol {
   margin: 50px auto 0;
   border-radius: 5px;
   color: var(--white);
-  background: var(--blue);
+  background: var(--bg-secondary);
 }
 
 .switches li {
@@ -884,6 +1104,7 @@ ol {
   align-items: center;
   justify-content: space-between;
   padding: 15px;
+  color: var(--black);
 }
 
 .switches span:last-child {
@@ -957,7 +1178,7 @@ ol {
 .skeleton-icon {
   width: 2rem;
   height: 2rem;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   overflow: hidden;
   background-color: var(--bg-secondary);
@@ -970,10 +1191,10 @@ ol {
   margin: 0.5rem 0;
   padding: 0.5rem;
   width: 100%;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   overflow: hidden;
-  background-color: var(--bg-primary);
+  background-color: var(--white);
 }
 
 .skeleton-div-column {
@@ -1001,11 +1222,11 @@ ol {
 
 .skeleton-wide,
 .skeleton-btn {
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
   position: relative;
   width: 100%;
   height: 1.5rem;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   overflow: hidden;
   background-color: var(--bg-secondary);
@@ -1018,21 +1239,23 @@ ol {
 .skeleton-left,
 .skeleton-right,
 .skeleton-mid {
+  position: relative;
   width: 25%;
   height: 1rem;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   background-color: var(--bg-secondary);
+  overflow: hidden;
 }
 
 .skeleton-img,
 .skeleton-img-sml,
 .skeleton-img-med,
 .skeleton-img-lrg {
-  margin: 0 0.5rem;
+  /* margin: 0 0.5rem; */
   width: 75px;
   height: 50px;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   background-color: var(--bg-secondary);
 }
@@ -1043,7 +1266,7 @@ ol {
 }
 
 .skeleton-img-med {
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
   width: 12rem;
   height: 8rem;
 }
@@ -1058,7 +1281,7 @@ ol {
   padding: 0.5rem;
   width: 100%;
   height: 1.5rem;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   background-color: var(--bg-secondary);
 }
@@ -1072,7 +1295,7 @@ ol {
   padding: 0.5rem;
   width: 100%;
   height: 1rem;
-  border: 1px solid var(--btn-enabled);
+  border: 1px solid var(--light);
   border-radius: 10px;
   background-color: var(--bg-secondary);
 }
@@ -1107,8 +1330,8 @@ ol {
 .shimmer {
   width: 50%;
   height: 100%;
-  background-color: var(--bg-tertiary);
-  opacity: 0.25;
+  background-color: var(--black);
+  opacity: 0.15;
   transform: skewX(-20deg);
 }
 
