--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,10 @@
 :root {
   --overlay-transparent: rgba(151, 126, 126, 0.7);
   --html-bg: #977e7e;
-  --bg-secondary: rgba(233, 91, 118, 0.33);
+  --bg-secondary: rgba(234, 234, 234, 1);
   --black: #161f27;
   --white: #fff;
+  --btn-white: #fff;
   --red: #e4012a;
   --blue: #00f;
   --green: #01e401;
@@ -18,12 +19,19 @@
   --grey: #e7eaef;
   --light: #202e3a;
   --drop-shadow: rgba(22, 31, 39, 0.5);
+  --drop-shadow-dark: rgba(22, 31, 39, 0.8);
   --drop-shadow-red: rgba(228, 1, 42, 0.5);
   font-size: 16px;
   font-size: calc(16px + 0.5vw);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+}
+
+@media (min-width: 750px) {
+  :root {
+    font-size: 19px;
+  }
 }
 
 /***********************************************************/
@@ -297,7 +305,7 @@ span {
 .btn:hover {
   border: none;
   background-color: var(--red);
-  color: var(--white);
+  color: var(--btn-white);
   transform: scale(1.05);
 }
 
@@ -309,6 +317,7 @@ span {
 input {
   display: block;
   margin: 0 auto;
+  margin-bottom: 0.5rem;
   padding: 0.25rem;
   width: 100%;
   height: 1.5rem;
@@ -318,6 +327,10 @@ input {
   background-color: var(--white);
   color: var(--black);
   outline: none;
+}
+
+input[type='date']::-webkit-calendar-picker-indicator:hover {
+  cursor: pointer;
 }
 
 input:focus {
@@ -335,6 +348,10 @@ input:invalid,
   background-size: auto 1rem;
   background-position: right;
   background-repeat: no-repeat;
+}
+
+::placeholder {
+  font-size: 0.8rem;
 }
 
 .b-none {
@@ -364,22 +381,35 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  border-bottom: 4px solid var(--red);
+  background-color: var(--white);
 }
 
 #pages {
   width: 100%;
-  min-height: 100vh;
   background-color: var(--white);
 }
 
 .page {
-  margin: 0 auto;
-  padding: 12vh 1rem 10vh;
-  min-height: 100vh;
+  min-height: 74vh;
   max-width: 90%;
+  margin: 14vh auto;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border: 1px solid var(--black);
+  border-radius: 0.6rem;
+  filter: drop-shadow(4px 4px 8px var(--drop-shadow));
+  background-color: var(--white);
+  transition: 100ms linear;
+}
+
+@media (max-width: 600px) {
+  .page {
+    border: none;
+    filter: none;
+  }
 }
 
 #footer {
@@ -419,11 +449,13 @@ body {
   bottom: 10vh;
   left: 0;
   width: 90%;
-  background-color: var(--white);
-  padding: 1rem;
-  border: 1px solid gold;
+  max-width: 375px;
   z-index: 101;
-  animation: slide-in 150ms forwards ease-in-out;
+  transform: none;
+  animation: slide-in 250ms forwards ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes slide-in {
@@ -435,77 +467,104 @@ body {
   }
 }
 
+@media (min-width: 650px) {
+  .modal {
+    transform: translateX(-50%);
+  }
+  @keyframes slide-in {
+    0% {
+      left: -150%;
+    }
+    100% {
+      left: 50%;
+    }
+  }
+}
+
 /***********************************************************/
 /************************* Header **************************/
 /***********************************************************/
 
+#header-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
+}
+
 #header-main {
   position: relative;
-  z-index: 4;
+  z-index: 5;
   height: 12vh;
+  width: 100%;
+  max-width: 750px;
+  margin: 0 auto;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  border-bottom: 4px solid var(--red);
   background-color: var(--white);
+}
+
+#back-btn {
+  position: absolute;
 }
 
 #header h2 {
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 #header .icon {
   height: 1rem;
 }
 
+#header .icon:hover {
+  cursor: pointer;
+}
+
 .no-menu {
   position: absolute;
-  z-index: 5;
+  z-index: 4;
   width: 80%;
   max-width: 300px;
-  top: 10vh;
-  right: -100%;
+  top: -150%;
+  right: 50%;
+  transform: translateX(50%);
   background-color: var(--white);
   border-bottom-left-radius: 0.6rem;
+  border-bottom-right-radius: 0.6rem;
   border: 1px solid var(--red);
   border-top: none;
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
   transition: 150ms ease-in-out;
+  overflow: hidden;
+}
+
+@media (min-width: 600px) {
+  .no-menu {
+    right: 0.5rem;
+    transform: none;
+  }
 }
 
 .show-menu {
-  right: 0;
+  top: 12vh;
 }
 
-.menu-btn {
+.menu-icon {
   position: absolute;
-  z-index: 6;
-  right: 5vw;
-  width: 2rem;
-  padding: 0 1rem;
-  background-color: var(--white);
-  height: 12vh;
-  border-bottom: 2px solid var(--red);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  right: 1.4rem;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 7;
+  height: 1rem;
+  cursor: pointer;
+  stroke: var(--red);
   transition: 150ms ease-in-out;
 }
 
-.menu-btn.menu-btn-show {
-  right: 0;
-  width: 80%;
-  height: 12vh;
-  align-items: flex-start;
-  border-left: 1px solid var(--red);
-  border-bottom: none;
-}
-
 #menu-top {
-  transform: translate(0, 0) rotate(0);
+  d: path('M0,4 L20,4');
   transition: 150ms ease-in-out;
 }
 #menu-middle {
@@ -513,18 +572,17 @@ body {
   transition: 150ms ease-in-out;
 }
 #menu-bottom {
-  transform: translate(0, 0) rotate(0);
   transition: 150ms ease-in-out;
 }
 
-.menu-btn-show #menu-top {
-  transform: translate(0.5rem, 0.15rem) rotate(45deg);
+.show-menu #menu-top {
+  d: path('M0,0 L20,20');
 }
-.menu-btn-show #menu-middle {
+.show-menu #menu-middle {
   opacity: 0;
 }
-.menu-btn-show #menu-bottom {
-  transform: translate(-0.15rem, 0.35rem) rotate(-45deg);
+.show-menu #menu-bottom {
+  d: path('M0,20 L20,0');
 }
 
 #menu a {
@@ -532,8 +590,8 @@ body {
   color: var(--black);
 }
 
-#menu a:hover {
-  color: var(--white);
+#menu a:hover h2 {
+  color: var(--btn-white);
 }
 
 .header-link {
@@ -545,7 +603,7 @@ body {
   background-color: var(--red);
 }
 
-#menu h1 {
+#menu h2 {
   margin: 1rem 0;
 }
 
@@ -559,7 +617,18 @@ body {
 /***********************************************************/
 
 #welcome {
-  border: 2px solid blue;
+  max-width: 550px;
+}
+
+#welcome .center {
+  max-width: 450px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+#welcome h1,
+#welcome p {
+  margin: 0.25rem 0;
 }
 
 @media (max-height: 650px) {
@@ -593,6 +662,45 @@ body {
   border: 1px solid var(--black);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
   background-color: var(--white);
+  transition: 50ms linear;
+}
+
+.more p {
+  color: var(--black);
+}
+
+.more .icon {
+  max-height: 0.65rem;
+}
+
+.more .icon g {
+  stroke: black;
+  fill: none;
+  transition: 50ms linear;
+}
+
+#search-form .type:hover {
+  background-color: var(--red);
+  border-color: var(--red);
+  /* transform: scale(1.025); */
+  color: var(--btn-white);
+}
+
+.type:hover p {
+  color: var(--btn-white);
+}
+
+.type:hover .icon g {
+  stroke: var(--btn-white);
+}
+
+.more:hover .icon g {
+  transform: translateX(0.15rem);
+}
+
+#search-form .type:active {
+  transform: scale(0.95);
+  filter: drop-shadow(4px 4px 8px var(--drop-shadow-red));
 }
 
 #search-form .type h2 {
@@ -606,11 +714,8 @@ body {
 }
 
 #search-form .selected {
-  background-color: var(--bg-secondary);
-}
-
-#search-form .more p {
-  color: var(--red);
+  border: 3px solid var(--red);
+  filter: drop-shadow(2px 2px 3px var(--drop-shadow-red));
 }
 
 #search-form ul {
@@ -620,10 +725,6 @@ body {
 #search-form li {
   margin: 1rem 0;
   list-style: none;
-}
-
-.more .icon {
-  max-height: 0.75rem;
 }
 
 .no-test-info,
@@ -654,6 +755,24 @@ body {
 /********************* Search Results **********************/
 /***********************************************************/
 
+.date {
+  color: var(--black);
+  font-weight: normal;
+}
+
+.date-flash {
+  animation: flash 250ms alternate;
+}
+
+@keyframes flash {
+  0% {
+    color: var(--red);
+  }
+  100% {
+    color: var(--black);
+  }
+}
+
 /* also in SelectionJSX */
 .date-picker,
 .date-picker-left {
@@ -667,6 +786,7 @@ body {
   border: 1px solid var(--black);
   border-radius: 0.3rem;
   background-color: var(--bg-secondary);
+  filter: drop-shadow(2px 2px 3px var(--drop-shadow));
 }
 
 .date-picker .icon,
@@ -683,6 +803,11 @@ body {
   opacity: 1;
 }
 
+.date-picker .icon:hover g,
+.date-picker-left .icon:hover g {
+  stroke: var(--red);
+}
+
 #search-results .date-picker {
   margin-top: 1rem;
 }
@@ -697,7 +822,17 @@ body {
   align-items: center;
 }
 
-.sort .small {
+.sort-by {
+  cursor: pointer;
+  border: none;
+  transition: 50ms linear;
+}
+
+.sort-by:hover {
+  color: var(--red);
+}
+
+.sort-by.selected {
   border-bottom: 1px solid var(--black);
 }
 
@@ -709,10 +844,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid var(--black);
+  /* border: 1px solid var(--black); */
   border-radius: 0.3rem;
   background-color: var(--white);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
+}
+
+#location-preview:hover {
+  cursor: pointer;
+  transform: scale(1.025);
+  filter: drop-shadow(2px 2px 3px var(--drop-shadow-dark));
 }
 
 #location-preview .icon {
@@ -722,14 +863,15 @@ body {
   stroke: var(--black);
   opacity: 1;
 }
-#location-preview img {
-  max-width: 30%;
+
+#location-preview:hover .icon {
+  filter: drop-shadow(2px 2px 3px var(--drop-shadow));
 }
 
 #preview-info {
   width: 90%;
   padding: 0.5rem 0.5rem 0 0.75rem;
-  border: 1px solid var(--black);
+  /* border: 1px solid var(--black); */
   border-radius: 0.3rem;
   background-color: var(--bg-secondary);
 }
@@ -791,16 +933,12 @@ body {
 /***********************************************************/
 
 #selection {
-  margin: 14vh auto;
-  padding: 0 1rem;
-  border-radius: 0.6rem;
-  border: 1px solid var(--black);
-  filter: drop-shadow(2px 2px 3px var(--drop-shadow));
-  background-color: var(--white);
+  max-width: 600px;
 }
 
 #selection form {
-  margin-top: 1rem;
+  margin: 1rem auto 0;
+  max-width: 450px;
 }
 
 #selection .item {
@@ -833,6 +971,7 @@ body {
   border: none;
   color: var(--black);
   background-color: var(--white);
+  cursor: pointer;
 }
 
 #selection .item .select-error {
@@ -863,9 +1002,18 @@ body {
 
 #login-form,
 #confirm-info {
+  padding: 1rem;
   width: 100%;
-  height: 72vh;
-  /* border: 2px solid blue; */
+  height: 100%;
+  max-height: 700px;
+  background-color: var(--white);
+}
+
+@media (min-height: 701px) {
+  #login-form,
+  #confirm-info {
+    border-radius: 0.6rem;
+  }
 }
 
 #login-form form,
@@ -882,24 +1030,23 @@ body {
 /***********************************************************/
 
 #appointments {
-  padding-top: 20vh;
+  max-width: 600px;
+  min-height: 78vh;
 }
 
 #appointments .tabs {
-  position: fixed;
-  top: 12vh;
-  left: 0;
   width: 100%;
-  padding-top: 1vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background-color: var(--white);
   z-index: 2;
+  border-radius: 0.6rem;
 }
 
 #appointments .tab,
 #appointments .tab-selected {
+  cursor: pointer;
   padding: 0.5rem;
   min-width: 30%;
   text-align: center;
@@ -910,17 +1057,30 @@ body {
   border-bottom: 3px solid var(--red);
 }
 
+#appointments-list {
+  padding-top: 3rem;
+  min-height: 72vh;
+  width: auto;
+}
+
+.preview:hover {
+  cursor: pointer;
+}
+
 .preview-info {
   font-size: 0.9rem;
 }
 
 .appt-item {
   position: relative;
-  width: 100%;
-  margin-bottom: 1rem;
-  padding: 0.7rem;
+  width: auto;
+  max-width: 450px;
+  margin: 0 auto 1rem;
+  padding: 1rem;
   border-radius: 0.6rem;
   border: 1px solid var(--black);
+  filter: drop-shadow(2px 2px 3px var(--drop-shadow));
+  background-color: var(--white);
 }
 
 .appt-btn,
@@ -951,8 +1111,26 @@ body {
 /************************ Account **************************/
 /***********************************************************/
 
+#account {
+  max-width: 600px;
+  justify-content: center;
+}
+
 #account-header {
-  margin: 1rem 0 2rem;
+  margin: 1rem auto 2rem;
+  width: 100%;
+  max-width: 450px;
+}
+
+#account-header h1 {
+  margin-left: 1rem;
+  text-align: left;
+}
+
+#account-items-list {
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 500px;
 }
 
 #account .item {
@@ -979,9 +1157,23 @@ body {
   opacity: 1;
 }
 
+#account .btn-small:hover {
+  border-color: var(--red);
+  background-color: var(--red);
+  color: var(--btn-white);
+}
+
+#account .btn-small:hover {
+  stroke: var(--white);
+}
+
+.item-inputs {
+  margin: 1rem auto 2rem;
+  max-width: 400px;
+}
+
 .account-input {
-  margin: 0.5rem auto 0;
-  max-width: 80%;
+  margin: 0.5rem 0 0;
 }
 
 .account-input label {
@@ -991,6 +1183,14 @@ body {
 
 #account hr {
   margin: 0.5rem 0;
+}
+
+/***********************************************************/
+/********************** Information ************************/
+/***********************************************************/
+
+#settings {
+  max-width: 400px;
 }
 
 /***********************************************************/
@@ -1011,8 +1211,11 @@ body {
   bottom: 80px;
 }
 
-#navbar {
+#navbar,
+#nav-click {
+  z-index: 2;
   width: 80%;
+  max-width: 750px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1022,10 +1225,25 @@ body {
   align-items: center;
 }
 
+#nav-click {
+  z-index: 3;
+  width: 100%;
+}
+
+.real-link {
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+}
+
+.nav-link {
+  pointer-events: none;
+}
+
 .navbar-default .icon {
-  transform: scale(1.2);
+  transform: scale(1.1);
   stroke: var(--red);
-  opacity: 0.7;
+  opacity: 1;
 }
 
 .navbar-active .icon {
@@ -1037,7 +1255,7 @@ body {
 .navbar-disabled .icon {
   transform: scale(1.2);
   stroke: var(--red);
-  opacity: 0.25;
+  opacity: 0.2;
 }
 
 /***********************************************************/
@@ -1056,7 +1274,7 @@ ol {
 .switches {
   max-width: 500px;
   width: 95%;
-  margin: 50px auto 0;
+  margin: 0 auto;
   border-radius: 5px;
   color: var(--white);
   background: var(--bg-secondary);
@@ -1269,6 +1487,7 @@ ol {
 }
 
 .skeleton-h1text {
+  margin: 0 auto;
   height: auto;
 }
 
@@ -1325,6 +1544,7 @@ ol {
   pointer-events: none;
   position: fixed;
   top: 90px;
+  left: 0;
   width: 100%;
   z-index: 102;
   overflow: hidden;
@@ -1332,6 +1552,8 @@ ol {
 
 .alert-init {
   position: relative;
+  max-width: 600px;
+  margin: 0 auto;
   padding: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -1384,4 +1606,13 @@ ol {
   100% {
     border-color: var(--red);
   }
+}
+
+.transition {
+  opacity: 0;
+  transition: 100ms linear;
+}
+
+.show {
+  opacity: 1;
 }
