search results and form refactored

--- a/src/index.css
+++ b/src/index.css
@@ -749,6 +749,10 @@ body {
   transform: translateY(0) scaleY(1);
 }
 
+#input-zip-label {
+  display: none;
+}
+
 #search-form input {
   max-width: 80%;
 }
